Fix color of stage header title when selected in dark mode

--- a/src/components/stage-selector/stage-selector.css
+++ b/src/components/stage-selector/stage-selector.css
@@ -64,7 +64,7 @@ $header-height: calc($stage-menu-height - 2px);
 }
 
 .stage-selector.is-selected .header-title {
-    color: $ui-white;
+    color: #ffffff;
 }
 
 .count {
